# SampleRealm-Wobble

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Source/: ModulationManager.h  Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/synth/: LFO.h  WavetableVoice.cpp  WavetableVoice.h
Source/ui/: CurveEditor.h  CustomLFOTabButton.h  CustomLookAndFeel.h  EnvelopePanel.h  LFOPanel.h  ModulatableSlider.h  Oscillator.h
